--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,29 @@
-Django==1.3
+Django==1.5.2
+MySQL-python==1.2.4
+PIL==1.1.7
+PyYAML==3.10
+South==0.8.4
+argparse==1.2.1
+distribute==0.6.28
 dj-database-url==0.2.2
+dj-static==0.0.5
+django-evolution==0.6.9
+django-toolbelt==0.0.1
+django-widget-tweaks==1.3
+gunicorn==18.0
+html5lib==0.95
+matplotlib==1.3.1
+nose==1.3.0
+numpy==1.8.0.dev-b209e19
+psycopg2==2.5.1
+py-mysql2pgsql==0.1.5
+pyparsing==2.0.1
+python-dateutil==1.5
+pytz==2013.7
+six==1.4.1
+static==0.4
+termcolor==1.1.0
+tornado==3.1.1
+virtualenv==1.10.1
 wsgiref==0.1.2
+ystockquote==0.2.4
